# libhrtime

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  README.md  configure  configure.in  libhrtime.spec.in  mkinstalldirs
doc/: Makefile.am  Makefile.in  get_hrtime.2  get_hrtime_self.2  get_hrtime_struct.2  hrtime_init.2
examples/: Makefile.am  Makefile.in  README  fork_test.c  print_hrtime.c  query_costs.c  syscall_timing.c
patches/: Makefile.am  Makefile.in  hrtime-0.6.1-2.2.18.patch  hrtime-0.6.1-2.4.0.patch
src/: Makefile.am  Makefile.in  hrtime.c
