noinst_PROGRAMS = fork_test print_hrtime query_costs syscall_timing

INCLUDES		= -I$(srcdir)/../src

fork_test_SOURCES	= fork_test.c
fork_test_LDADD		= ../src/libhrtime.la

print_hrtime_SOURCES	= print_hrtime.c
print_hrtime_LDADD	= ../src/libhrtime.la

query_costs_SOURCES	= query_costs.c
query_costs_LDADD	= ../src/libhrtime.la

syscall_timing_SOURCES	= syscall_timing.c
syscall_timing_LDADD	= ../src/libhrtime.la

